<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Solitaire</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="theme">Theme</string>

    <string name="congratulation">Congratulation</string>
    <string name="you_win">"again"</string>

    <string name="game_level">"Game Level"</string>
    <string name="restart">Restart</string>

    <string name="level_hard">Hard</string>
    <string name="level_normal">Normal</string>
    <string name="level_easy">Easy</string>
    <string name="color_selector">Background</string>
    <string name="restore">Restore</string>

    <string name="step">Step : <xliff:g>%1$d</xliff:g></string>
    <string name="level">Level : <xliff:g>%1$s</xliff:g></string>
    <string name="time">Time : <xliff:g>%1$d</xliff:g></string>
    <string name="f6" translatable="false">FFFFFF</string>
    <string name="picture_format" translatable="false">yyyyMMdd_HHmmss</string>
    <string name="album">album</string>
    <string name="call_camera">call camera</string>
    <string name="camera">camera</string>
    <string name="error_in_parse_color">Error in pasring color.</string>
    <string name="capture">Capture</string>
    <string name="switch_camera" translatable="false">Switch camera.</string>
    <string name="msg_no_camera_detected">No camera detected.</string>
    <string name="msg_camera_not_available">Camera is not available.</string>
    <string name="capture_view" translatable="false">capture view</string>

    <string name="shortcuts_level_hard_short" translatable="false">@string/level_hard</string>
    <string name="shortcuts_level_normal_short" translatable="false">@string/level_normal</string>
    <string name="shortcuts_level_easy_short" translatable="false">@string/level_easy</string>
    <string name="shortcuts_level_hard_long">Hard level</string>
    <string name="shortcuts_level_normal_long">Normal level</string>
    <string name="shortcuts_level_easy_long">Easy level</string>
    <string name="selected">SELECTED</string>
</resources>
