<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingLeft="24dp">

    <EditText
        android:id="@+id/color_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        android:maxLength="6"
        android:hint="@string/f6"
        android:gravity="center"/>

    <Button
        android:id="@+id/select_from_album"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/album"/>

    <Button
        android:id="@+id/select_from_camera"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/call_camera"/>

    <Button
        android:id="@+id/select_from_capture"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/camera"/>

</LinearLayout>