<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="yorek.com.solitaire.ui.SplashActivity"
    android:background="@drawable/bg_1">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_gravity="bottom"
        style="@style/CardView.Light"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/level_selector_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textColor="?attr/colorPrimary"
                android:text="@string/game_level"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="0dp"/>
            <RadioGroup
                android:id="@+id/level_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/level_selector_text_view"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:checkedButton="@+id/level_hard_rbtn">
                <RadioButton
                    android:id="@+id/level_hard_rbtn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/level_hard"/>
                <RadioButton
                    android:id="@+id/level_normal_rbtn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/level_normal"/>
                <RadioButton
                    android:id="@+id/level_easy_rbtn"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/level_easy"/>
            </RadioGroup>
            <Button
                android:id="@+id/btn_begin_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"
                android:layout_below="@id/level_selector"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:textColor="?attr/colorAccent"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>
